fix gaps

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -166,11 +166,9 @@
     width: 50%;
     transform: translate(-50%, -50%);
     transition: 0.4s;
-    position: absolute;
     background-color: black;
     border-radius: 50%;
-    min-height: 280px;
-    min-width: 280px;
+   
     background: linear-gradient(
       0deg,
       rgba(29, 216, 255, 1) 0%,
@@ -187,12 +185,22 @@
     width: 50%;
     transform: translate(-50%, -50%);
     transition: 0.4s;
-    position: absolute;
     background-color: black;
     border-radius: 50%;
-    min-height: 280px;
-    min-width: 280px;
+  
     z-index: 1;
+  }
+  .chamber-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    height: 50%;
+    width: 50%;
+    transform: translate(-50%, -50%);
+    transition: 0.4s;
+    border-radius: 50%;
+    z-index: 20 !important;
+    overflow: hidden;
   }
   .chamber {
     position: absolute;
